--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Algorithm::ConstructDFA::XS.
 
+0.09  February 2014
+  - added many_start option (documented in the Pure Perl version)
+
 0.03  February 2014
 	- Initial release
