--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Algorithm::ConstructDFA::XS.
 
+0.13  February 2014
+  - Fixed bugs in handling of multiple start states
+
 0.09  February 2014
   - added many_start option (documented in the Pure Perl version)
 
